--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/axios-mock-adapter": "^1.10.4",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.12",
+    "@types/node": "^22.10.5",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@types/react-helmet": "^6.1.11",
